# Lattice

./: .gitignore  .oxlintrc.json  .prettierignore  AGENT.md  BASEPROJECTSETUP.md  BELONGS_IN_UI.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE-SETUP.md  COMMANDS_LATER.md  COMPLETED.md  CONTRIBUTING.md  DEPLOY-GUIDE.md  GROVEENGINE-BOUNDARY-MAP.md  LICENSE  PLAN.md  PROMPT_FINAL_INTEGRATION.md  PROMPT_GROVEENGINE_MIGRATION.md  PROMPT_GROVEUI_MIGRATION.md  README.md  SETUP.md  SVELTE_DESYNC_AUDIT.md  TODOS.md  belongs-in-engine.md  drizzle.config.ts  drizzle.curios.config.ts  drizzle.observability.config.ts  eslint.config.js  icon-analysis.md  integration-summary.md  package.json  plan-fixes.md  pnpm-lock.yaml  pnpm-workspace.yaml  secrets_template.json  site-specific-code.md  sst.config.ts  todo-mom-launch.md
archives/GroveDomainTool-python/: .cloudflare_pricing_cache.json  .gitignore  README.md  durable_object_workflow_prompt.md  pyproject.toml
archives/GroveDomainTool-python/docs/: SPEC.md
archives/GroveDomainTool-python/plans/: forage-deepseek-v32-openrouter-update.md  phase7-provider-cleanup-cerebras.md
archives/GroveDomainTool-python/src/forage/: __init__.py  config.py  pricing.py
archives/GroveDomainTool-python/src/forage/agents/: __init__.py  prompts.py
archives/GroveDomainTool-python/src/forage/providers/: __init__.py  openrouter.py
archives/GroveDomainTool-python/src/forage/quiz/: __init__.py
archives/GroveDomainTool-python/tests/: __init__.py  test_agents.py  test_orchestrator.py  test_providers.py  test_quiz.py
docs/: README.md  (+47 more)
tools/glimpse/: .glimpse-batch.example.yml  .glimpse-test.yml  pyproject.toml
tools/glimpse/src/glimpse/: __init__.py  __main__.py  cli.py  config.py
tools/glimpse/src/glimpse/browse/: __init__.py  executor.py  interpreter.py  resolver.py
tools/glimpse/src/glimpse/capture/: __init__.py  auth.py  console.py  engine.py  injector.py  screenshot.py
tools/glimpse/src/glimpse/commands/: batch.py  browse.py  capture.py  detect.py  diff.py  install.py  matrix.py  seed.py  showroom.py  status.py  stop.py  watch.py
tools/glimpse/src/glimpse/detection/: __init__.py  a11y.py  heuristics.py  vision.py
tools/glimpse/src/glimpse/output/: __init__.py  formatter.py
tools/glimpse/src/glimpse/seed/: __init__.py  bootstrap.py  discovery.py
tools/glimpse/src/glimpse/server/: __init__.py  health.py  manager.py
tools/glimpse/tests/: test_bootstrap.py  test_config.py  test_console.py  test_console_collector.py  test_devices.py  test_diff.py  test_engine.py  test_injector.py  test_interpreter.py  test_naming.py  test_screenshot.py  test_server.py  test_validation.py
tools/index-viz/: pyproject.toml
tools/index-viz/src/index_viz/: cli.py  reader.py  visualize.py
(+5133 files in other folders)
