[project]
name = "forage"
version = "0.1.0"
description = "AI-powered domain discovery tool - Before you can plant, you have to search"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Autumn Brown", email = "autumn@grove.place" }
]
requires-python = ">=3.11"
keywords = ["domain", "availability", "rdap", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
kimi = [
    "openai>=1.30.0",  # Kimi uses OpenAI-compatible API
]

[project.scripts]
forage = "forage.cli:main"

[project.urls]
Homepage = "https://forage.grove.place"
Repository = "https://github.com/AutumnsGrove/Forage"
Issues = "https://github.com/AutumnsGrove/Forage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - we handle this with line-length

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
